# pugphb.github.io

./: .gitignore  LICENSE  README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
assets/css/: pug.css
content/: bem-vindos-ao-pug.md
content/comunicados/2022/: 2022-12-14-bem-vindxs-ao-pug.md
content/pages/: membros.md
output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
output/author/: pugphb.html
output/category/: review.html
output/feeds/: all.atom.xml
