[tool.poetry]
name = "pugphb.github.io"
version = "0.1.0"
description = ""
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.8.0"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
